@@ -404,7 +404,7 @@ CutStairwell 1, -8.5, -3.5, 8.5, 3.5, 0, 5
     SetAutoSize = true, true
     
     #This command adds a door, and automatically cuts the walls for you.
-    AddStairsDoor 1, StairsDoor, 0.2, 1, -8.5, 0, 3.5, 8, 0, 1, 1
+    AddStairsDoor 1, , , False, StairsDoor, 0.2, 1, 0, -8.5, 0, 3.5, 8, 0, 1, 1
     
 <EndFloors>
 
